fix: remove bounce and airgap from the navbar

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -1,18 +1,16 @@
 .main-nav {
-  padding: 30px 35px 20px;
-  transition: all 0.5s ease-in-out;
-  position: fixed;
-  z-index: 99;
-  top: 0;
+  // use a var and calc for this perhaps - ala tailwind
+  padding: 20px;
   width: 100%;
 
-  @include desktop {
+  @include mobile {
     text-align: center;
+    background: $white;
     padding: 20px 30px;
     width: 95%;
     margin: 20px auto;
     border-radius: 8px;
-    background: $white;
+
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09);
   }
   @include mobile {
